Document PPDG/src/objects/IVRCustomerVerification__c.object
<CustomObject>
    <description>C00232</description>
    <fields>
        <fullName>Account_with_IBB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account with IBB</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipLabel>IVRCustomerVerifications</relationshipLabel>
        <relationshipName>IVRCustomerVerifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBSAccountNoID__c</fullName>
        <label>EBSAccountNoID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBSCustomerID__c</fullName>
        <label>EBSCustomerID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IVRCustomerVerifications</relationshipLabel>
        <relationshipName>IVRCustomerVerifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifyGUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>VerifyGUID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>IVRCustomerVerification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Prospect_Customer__c</columns>
        <columns>Account_with_IBB__c</columns>
        <columns>EBSAccountNoID__c</columns>
        <columns>EBSCustomerID__c</columns>
        <columns>Verified__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>VerifyGUID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>IVRCustomerVerification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IVRCustomerVerifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>